# demschooltools

./: .classpath  .env  .eslintrc.json  .gitignore  .prettierrc  .project  2.4-TESTING  AGENTS.md  LICENSE  Procfile  README.md  SchoolCRM.vpj  SchoolCRM.vpw  activate_old_jdk.sh  add_org_config_arg.py  add_template_arg.py  build.sbt  build.sh  build_and_copy_to_server.sh  connect_to_server.bat  connect_to_server.sh  copy_release_to_server.bat  copy_release_to_server.sh  count_records.py  crowdin.yml  demschooltools.code-workspace  encapsulate_fields.py  fix_case_numbers.sql  get_prod_db.bat  glacier_commands.bat  import.py  import_miami.py  import_philly_rule_book.py  import_rule_book.py  import_students.py  import_tss.py  import_wicklow.py  jcdb.vpj  jcdb.vpw  locust_load_test.py  (+15 more)
django/: .gitignore  Procfile  README.md  format-djhtml.sh  manage.py  pyproject.toml  requirements.in  requirements.txt  run_django.sh  test_initial_migrate.sh
django/custodia/: admin.py  models.py  views.py
django/custodia/migrations/: 0001_initial.py  0002_auto_20250226_2043.py  0003_swipe_person_swipe_day_empty_out_unique.py
django/custodia/templates/: index.html  login.html
django/demschooltools/: asgi.py  auth.py  form_renderer.py  middleware.py  settings.py  settings_prod.py  settings_prod_tunnel.py  storage.py  urls.py  wsgi.py
django/dst/: admin.py  apps.py  attendance_views.py  custom_field_utils.py  custom_field_views.py  fields.py  manual_views.py  models.py  org_config.py  pdf_utils.py  person_serializers.py  person_views.py  serializers.py  tests.py  utils.py  views.py
django/manual/: models.py
django/scripts/: copy_manual.py  print_stats.py
django/static/: 404.html  500.html  about.html  index.html  login.html  starter-template.css
(+925 files in other folders)
