[project]
name = "demschooltools-py"
version = "0.1"
requires-python = "~=3.12"

dependencies = [
    "bcrypt~=4.3",
    "django~=5.1",
    "django-vite>=3.1.0",
    "djangorestframework~=3.15",
    "drf-orjson-renderer~=1.7",
    "mistletoe>=1.4.0",
    "playwright~=1.49",
    "psycopg2~=2.9",
    "pyjwt~=2.10",
    "requests~=2.32",
    "rollbar>=1.2.0",
]

[dependency-groups]
prod = [
    "gunicorn~=23.0",
]
dev = [
    "django-silk~=5.3",
    "djhtml>=3.0.7",
    "honcho>=2.0.0",
    "ipython>=9.4.0",
    "pyinstrument~=5.0",
    "python-dotenv>=1.1.1",
    "tabulate",
]

[tool.ruff.lint]
extend-select = [
    "I",
]
